# cine

./: .env.example  .gitignore  LICENSE  README.md  docs.md  ecosystem.config.cjs  package-lock.json  package.json
backend/: Cargo.toml
backend/src/: db.rs  jobs.rs  main.rs
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: ApiPayloadModal.tsx  App.tsx  AppBrand.tsx  FilmPreviewHero.tsx  FullscreenFilmPlayer.tsx  HomePage.tsx  ImageGallery.tsx  ImageUploadZone.tsx  JobQueueBar.tsx  JobQueueContext.tsx  KeyframeMethodPicker.tsx  PixelProgress.tsx  ProjectPanel.tsx  QuickBuilderPage.tsx  QuickBuilderProcessing.tsx  ReasoningOrb.tsx  SceneInspector.tsx  SettingsPage.tsx  ThemeToggle.tsx  Timeline.tsx  VideoSourcePicker.tsx  YoloOpeningPicker.tsx  api.ts  applyScenePlan.ts  briefNarrativeMode.ts  createAllPipeline.ts  createAllTypes.ts  effectiveSettings.ts  index.css  jobTypes.ts  keyframeMethods.ts  keyframeSettings.ts  main.tsx  narrativeModeEditor.tsx  narrativeModes.ts  openingStill.ts  planDebug.ts  planningModes.ts  prompts.ts  quickBuilderAbort.ts  (+12 more)
media-server/: db.js  index.js  jobWorker.js  planner  runPipeline.ts
media-server/pipeline/: jobApi.js
planner/: briefNarrativeMode.js  dialogueUtil.js  planLog.js  sceneAlign.js  sceneDialogue.js  scenePlan.js  shotKind.js  staticImagePrompt.js  storyFlow.js
scripts/: media-api.mjs  plan-bridge-stream.mjs  plan-bridge.mjs  test-apis.mjs  test-cine-apis.mjs  xai-curl-fetch.mjs
